--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,11 @@
 body {
   height: 100%;
 }
+.logo{
+  height: 250px; 
+  width: 250px; 
+  border-radius: 1250px;
+}
 /* .faliure{
   font-weight: 400;
   padding-bottom: 20px;
